--- a/_posts/2016-09-17-hello-world.html
+++ b/_posts/2016-09-17-hello-world.html
@@ -1,7 +1,49 @@
 ---
 layout: default
-title: 你好，世界!!!????
+title: Hello World!
 ---
 <h2>{{ page.title }}</h2>
-<p>我的第一篇文章!!!!</p>
+<p>for test</p>
+<p>《胆小鬼》是梁咏琪演唱的一首歌曲，收录在专辑《梁咏琪gigi》</p>
+<p>你爱咖啡，低调的感觉
+偏爱收集的音乐怪得很另类，诶
+你很特别，每一个小细节
+唉唉……呀
+如此的对味……
+我怕浪费，情绪的错觉
+讨厌自己像刺猬小心的防备，诶
+我很反对为失恋掉眼泪
+唉唉唉唉呀……
+离你远一些
+喜欢看你紧紧皱眉
+叫我胆小鬼
+你的表情大过于朋友的暧昧
+寂寞的称谓甜蜜的责备
+有独一无二，专属的特别
+喜欢看你紧紧皱眉
+叫我胆小鬼
+我的心情就象和情人在斗嘴，诶
+奇怪的直觉
+错误的定位
+对你唉唉唉唉呀
+我有点胆怯
+我怕浪费，情绪的错觉
+讨厌自己像刺猬小心的防备，诶
+我很反对为失恋掉眼泪
+唉唉唉唉呀
+离你远一些
+喜欢看你紧紧皱眉
+叫我胆小鬼
+你的表情大过于朋友地暧昧
+寂寞的称谓甜蜜的责备
+有独一无二，专属的特别
+喜欢看你紧紧皱眉
+叫我胆小鬼，
+我的心情就象和情人在斗嘴，诶
+奇怪的直觉
+错误的定位
+对你唉唉唉唉呀
+我有点胆怯
+我在我的世界不能犯规
+你在你的世界笑我无所谓</p>
 <p>{{ page.date | date_to_string }}</p>
