--- a/_posts/2016-09-17-hello-world.html
+++ b/_posts/2016-09-17-hello-world.html
@@ -50,3 +50,4 @@ title: Hello World!
 <a href="http://baike.baidu.com/item/%E8%83%86%E5%B0%8F%E9%AC%BC/215501">百度百科</a>
 <a href="http://www.xiami.com/song/380125?spm=a1z1s.6659509.0.0.akMLVX">虾米音乐</a>
 <p>{{ page.date | date_to_string }}</p>
+<a href="{{ site.baseurl }}">{{ page.title }}</a>
