--- a/_posts/2016-09-17-first_post.html
+++ b/_posts/2016-09-17-first_post.html
@@ -26,4 +26,4 @@ title: 单词本
  -->
 
 <p>{{ page.date | date_to_string }}</p>
-<a href="{{ site.baseurl }}">{{ page.title }}</a>
+<a href="{{ site.baseurl }}">首页</a>
