--- a/_posts/2016-09-17-hello-world.html
+++ b/_posts/2016-09-17-hello-world.html
@@ -5,7 +5,7 @@ title: Hello World!
 <h2>{{ page.title }}</h2>
 <p>《胆小鬼》是梁咏琪演唱的一首歌曲，收录在专辑《梁咏琪gigi》</p>
 <h3>发行日期：1998-6</h3>
-<h3>歌词</h3>
+<h3>词：郑淑妃 曲：李思菘</h3>
 <p>你爱咖啡，低调的感觉<br>
 偏爱收集的音乐怪得很另类，诶<br>
 你很特别，每一个小细节<br>
