--- a/_posts/2016-09-17-first_post.html
+++ b/_posts/2016-09-17-first_post.html
@@ -25,5 +25,4 @@ title: 单词本
 <p></p>
  -->
 
-<p>{{ page.date | date_to_string }}</p>
-<a href="{{ site.baseurl }}">首页</a>
+<p>{{ page.date | date_to_string }}<a href="{{ site.baseurl }}">首页</a></p>
