--- a/_posts/2016-09-17-problem_list.html
+++ b/_posts/2016-09-17-problem_list.html
@@ -3,6 +3,6 @@ layout: default
 title: js 问题列表
 ---
 <h2>{{ page.title }}</h2>
-<p>es6 extends babel实现下：父类不能直接或间接有子类 import</p>
+<p>1. es6 extends babel实现下：父类不能直接或间接有子类 import</p>
 
 <p>{{ page.date | date_to_string }}  <a href="{{ site.baseurl }}">首页</a></p>
